# gitplex

./: .gitignore  README.md  pyproject.toml
gitplex/: __init__.py  __main__.py  ascii_art.py  backup.py  cli.py  credentials.py  exceptions.py  git.py  gpg.py  profile.py  providers.py  ssh.py  ssh_manager.py  system.py  system_utils.py  ui.py  ui_common.py  workspace.py
tests/: conftest.py  test_cli.py  test_profile.py  test_system.py
tests/integration/: test_cli_integration.py  test_workflows.py
