[project]
name = "gitplex"
version = "0.1.0"
description = "Seamlessly manage multiple Git identities and workspaces"
authors = [
    {name = "Arakiss", email = "petruarakiss@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["git", "identity", "management", "ssh", "workspace"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities",
]

dependencies = [
    "click>=8.1.7",
    "rich>=13.7.0",
    "pydantic>=2.6.1",
    "cryptography>=42.0.2",
    "pathlib>=1.0.1",
    "typing-extensions>=4.9.0",
]

[project.urls]
Homepage = "https://github.com/arakiss/gitplex"
Repository = "https://github.com/arakiss/gitplex"
Documentation = "https://github.com/arakiss/gitplex#readme"
"Bug Tracker" = "https://github.com/arakiss/gitplex/issues"

[project.scripts]
gitplex = "gitplex.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=gitplex"
testpaths = [
    "tests",
]

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.1"
mypy = "^1.14.1"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
types-click = "^7.1.8"
types-cryptography = "^3.3.23.2"

